system/network-policy/resources/default-deny-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: default-deny-egress
spec:
  endpointSelector:
    matchExpressions:
      - key: k8s:io.kubernetes.pod.namespace
        operator: Exists
  enableDefaultDeny:
    egress: true
    ingress: false
  egress:
    - {}
