system/network-policy/resources/default-deny-ingress.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: default-deny-ingress
spec:
  endpointSelector:
    matchExpressions:
      - key: k8s:io.kubernetes.pod.namespace
        operator: Exists
      - key: k8s:io.kubernetes.pod.namespace
        operator: NotIn
        values:
          - 1password
          - actions-runner
          - apcupsd
          - argocd
          - authentik
          - cert-manager
          - cloudflare-ddns
          - cnpg-system
          - descheduler
          - docker-registry-secrets
          - elastic-system
          - external-dns
          - haproxy-controller
          - influxdb
          - kube-system
          - loki
          - mackerel-operator
          - mahiron
          - mirakurun
          - monitoring
          - opentelemetry-operator-system
          - otel-external
          - prometheus
          - prometheus-operator
          - redis-operator
          - switchbot-meter-exporter
          - synology-csi
          - tailscale
          - teamspeak
          - tempo
  enableDefaultDeny:
    ingress: true
    egress: false
  ingress:
    - {}
