system/network-policy/resources/hubble-relay.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hubble-relay
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      k8s-app: hubble-relay
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              k8s-app: hubble-ui
      ports:
        - port: 4245
          protocol: TCP
