system/network-policy/resources/hubble-ui.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      k8s-app: hubble-ui
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: haproxy-controller
          podSelector:
            matchLabels:
              app.kubernetes.io/name: kubernetes-ingress
              app.kubernetes.io/instance: haproxy-ingress
      ports:
        - port: 8081
          protocol: TCP
