system/network-policy/resources/metrics-api.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: metrics-api
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: metrics-server
      k8s:app.kubernetes.io/instance: metrics-server
  enableDefaultDeny:
    ingress: true
    egress: false
  ingress:
    - fromEntities:
        - kube-apiserver
        - remote-node
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
